# Environmental-Constraint-Extraction-Tool

./: .env.example  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  Taskfile.yml  docker-compose.yml
include/include/spot/misc/: _config.h
include/lib/: libbddx.0.dylib  libbddx.dylib  libbddx.la  libspot.dylib  libspot.la  libspotgen.0.dylib  libspotgen.dylib  libspotgen.la  libspotltsmin.0.dylib  libspotltsmin.dylib  libspotltsmin.la
include/lib/pkgconfig/: libbddx.pc  libspot.pc  libspotgen.pc  libspotltsmin.pc
include/share/man/man1/: autcross.1  autfilt.1  dstar2tgba.1  genaut.1  genltl.1  ltl2tgba.1  ltl2tgta.1  ltlcross.1  ltldo.1  ltlfilt.1  ltlgrind.1  ltlsynt.1  randaut.1  randltl.1
include/share/man/man7/: spot-x.7  spot.7
src/: main.cpp  script.sh
